sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1179 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam_groups/new.html.erb
+++ b/app/views/exam_groups/new.html.erb
@@ -55,7 +55,7 @@
         <%= error_messages_for :exam_group %>
         <% form_remote_for :exam_option, :url => {:controller=>'exam',:action => 'update_exam_form',:batch=>@batch} do |form| %>
           <div class="label-field-pair">
-            <label for="exam_name"><%= t('new_text') %></label>
+            <label for="exam_name"><%= t('exam_name') %></label>
             <% if params[:ename].nil?  %>
               <% @ename = "" %>
             <% else %>
