style fixed in sub menus
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1180 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -129,7 +129,7 @@ body {
     text-decoration: none;
 }
 #main-menu li ul.level-1 li ul.level-2{
-    margin: 0;
+    margin: -1px 0 0 0;
     padding: 0;
     position: absolute;
     left: 140px;
