feature => {added description field in privileges table }, fixes #1115
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1182 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/edit_privilege.html.erb
+++ b/app/views/employee/edit_privilege.html.erb
@@ -43,12 +43,12 @@
         <%    hr = Configuration.find_by_config_value("HR") %>
         <%  finance = Configuration.find_by_config_value("Finance") %>
         <%  if hr.nil?  %>
-          <% if privilege.id ==9 or  privilege.id ==17 or privilege.id ==19 %>
+          <% if privilege.name =="HrBasics" or  privilege.name =="EmployeeAttendance" or privilege.name =="EmployeeSearch" %>
             <% next %>
           <% end %>
         <% end %>
         <%  if finance.nil?  %>
-          <% if privilege.id ==14 or  privilege.id ==18 %>
+          <% if privilege.name =="FinanceControl" or  privilege.name =="PayslipPowers" %>
             <% next %>
           <% end %>
         <% end %>
