--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -41,7 +41,7 @@
     <% end %>
     <% @employee_subjects=[] %>
     <% @employee_subjects= @current_user.employee_record.subjects.map { |n| n.id} if @current_user.employee?  %>
-    <%  if (permitted_to? :create_exam,:exam and @allow_for_exams == true and !@current_user.privileges.map{|p| p.id}.include?(3)) or @current_user.admin? or !@employee_subjects.empty? or (@current_user.privileges.map{|p| p.id}.include?(1)) or @current_user.privileges.map{|p| p.id}.include?(2) %>
+    <%  if (permitted_to? :create_exam,:exam and @allow_for_exams == true and !@current_user.privileges.map{|p| p.name}.include?("ViewResults")) or @current_user.admin? or !@employee_subjects.empty? or (@current_user.privileges.map{|p| p.name}.include?("ExaminationControl")) or @current_user.privileges.map{|p| p.name}.include?("EnterResults") %>
       <div class="link-box">
         <div class="link-heading"><%= link_to "#{t('exam_management')}" ,:action=>'create_exam' %>  </div>
         <div class="link-descr"><%= t('create_a_new_exam_and_enter_result') %></div>
