--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -186,7 +186,7 @@
       <% @employee_subjects= @user.employee_record.subject_ids  %>
       <% if @employee_subjects.empty?%>
        
-        <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? or @user.privileges.map{|p| p.id}.include?(8) or @user.privileges.map{|p| p.id}.include?(16) %>
+        <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
           <div class="button-box">
             <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
               :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
@@ -194,7 +194,7 @@
         <%end%>
 
 
-        <% if permitted_to? :index, :exam and (@user.privileges.map{|p| p.id}.include?(1) or @user.privileges.map{|p| p.id}.include?(2) or @user.privileges.map{|p| p.id}.include?(3)) %>
+        <% if permitted_to? :index, :exam and (@user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") or @user.privileges.map{|p| p.name}.include?("EnterResults") or @user.privileges.map{|p| p.name}.include?("ViewResults")) %>
           <div class="button-box">
             <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
               :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
