--- a/app/views/user/edit_privilege.html.erb
+++ b/app/views/user/edit_privilege.html.erb
@@ -45,23 +45,23 @@
         <%  finance = Configuration.find_by_config_value("Finance") %>
         <%  sms = Configuration.find_by_config_value("SMS") %>
         <%  if hr.nil?  %>
-          <% if privilege.id ==9 or  privilege.id ==17 or privilege.id ==18 or privilege.id ==19 %>
+          <% if privilege.name =="HrBasics" or  privilege.name =="EmployeeAttendance" or privilege.name =="PayslipPowers" or privilege.name =="EmployeeSearch" %>
             <% next %>
           <% end %>
         <% end %>
         <%  if finance.nil?  %>
-          <% if privilege.id ==14  %>
+          <% if privilege.name =="FinanceControl" %>
             <% next %>
           <% end %>
         <% end %>
         <%  if sms.nil?  %>
-          <% if privilege.id ==20  %>
+          <% if privilege.name =="SMSManagement" %>
             <% next %>
           <% end %>
         <% end %>
         <div class="name_list<%=cycle('odd', 'even')%>"><li>
             <label><%= check_box_tag "user[privilege_ids][]", privilege.id, @user.privileges.include?(privilege),:class=>'right'%>
-              <div class="att_list_names"> <%= t(privilege.name) %> </div> </label>
+              <div class="att_list_names"> <%= t(privilege.description) %> </div> </label>
           </li></div>
       <% end %>
       <div class="user_submit_button1">
