changed forgot password system input to username and removed email-uniqueness  validation
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1185 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/forgot_password.erb
+++ b/app/views/user/forgot_password.erb
@@ -33,7 +33,7 @@
         <div id="login_area">
           <label for="email"><%= t('enter_email') %></label>
           <div id="email_textbox_bg">
-            <%= form.text_field :email %>
+            <%= form.text_field :username %>
           </div>
 
           <div id="submit_area">
