sreeshanth(translation  changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1186 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/profile.erb
+++ b/app/views/student/profile.erb
@@ -127,7 +127,7 @@
           <tr class="odd left"><td><%= t('sms_alerts') %></td><td class="right"><%= @student.is_sms_enabled?? "Enabled":"Disabled" %></td></tr>
         <% end  %>
       <% end  %>
-      <tr class="even left"><td><%= t('contact_message') %> :</td><td class="right">
+      <tr class="even left"><td><%= t('contact_message') %></td><td class="right">
           <%= link_to @immediate_contact.full_name, :controller => "student", :action => "guardians", :id => @student.id \
             unless @immediate_contact.nil? %><%= "(" + @immediate_contact.mobile_phone + ")" if @immediate_contact and !@immediate_contact.mobile_phone.empty? %>
           <% if @current_user.admin? %>
