sreeshanth(translation  changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1187 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/additional_exam/_exam_grade_form.erb
+++ b/app/views/additional_exam/_exam_grade_form.erb
@@ -32,7 +32,7 @@
     <%= f.hidden_field :exam_type,:value=>@type %>
      <%= f.hidden_field :students_list,:value=>@students_list %>
     <div class="text-input-bg">
-    <%= f.text_field :exam_type, :value=>@type,:disabled=>true %>
+    <%= f.text_field :exam_type, :value=>@type=='Marks' ? t('marks_and_grades') : t('marks'),:disabled=>true %>
     </div>  <%= link_to "#{t('change_type')}", new_batch_additional_exam_group_path(@batch,:ename=>@name),:class=>"type_link" %>
   </div>
 
