--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,5 +1,6 @@
 <% this_user = User.find(session[:user_id]) if session[:user_id] %>
 <% arrow_dir = rtl? ? "◀" : "▶" %>
+<% @modules = Configuration.available_modules %>
 <ul id="main-menu">
   <li><%= link_to t('dashboard_text'), :controller => "user", :action => "dashboard" %></li>
   <li><%= link_to t('students'), :controller => "student", :action => "index" \
@@ -34,8 +35,7 @@
         <li><%= link_to "#{t('add_admission_additional_detail')}", :controller=>"student", :action => "add_additional_details" %></li>
       <% end %>
       <% if permitted_to? :index, :sms %>
-        <% @config = Configuration.available_modules %>
-        <% if @config.include?('SMS') %>
+        <% if @modules.include?('SMS') %>
           <li><%= link_to "#{t('sms_module')}", :controller=>"sms", :action => "index" %></li>
         <% end %>
       <% end %>
@@ -47,8 +47,7 @@
       if this_user.admin? %>
     <ul class="level-1">
       <%if permitted_to? :edit,:timetable%>
-        <% @config = Configuration.available_modules %>
-        <% if @config.include?('HR') %>
+        <% if @modules.include?('HR') %>
           <li><%= link_to "#{t('create_or_edit_timetable')}", :controller => "timetable", :action => "select_class2" %></li>
         <% else %>
           <li><%= link_to "#{t('create_or_edit_timetable')}", :controller => "timetable", :action => "select_class" %></li>
@@ -59,8 +58,8 @@
         <li><%= link_to "#{t('view_timetable')}", :controller => "timetable", :action => "view" %></li>
       <%  end%>
       <%  if permitted_to? :edit,:timetable%>
-        <% @config = Configuration.get_config_value('StudentAttendanceType') %>
-        <% if @config == 'SubjectWise' %>
+        <% @attendance_type = Configuration.get_config_value('StudentAttendanceType') %>
+        <% if @attendance_type == 'SubjectWise' %>
           <li><%= link_to "#{t('swap_class')}", :controller => "timetable", :action => "extra_class" %></li>
         <%  end %>
       <%  end %>
@@ -140,6 +139,7 @@
           <li><%= link_to "#{t('transactions')}", :controller => "finance", :action => "transactions" %> </li>
           <li><%= link_to "#{t('donations')}", :controller => "finance", :action => "donation" %></li>
           <li><%= link_to "#{t('automatic_transactions')}", :controller => "finance", :action => "automatic_transactions" %></li>
+          <% @hr = Configuration.find_by_config_value("HR") %>
           <% unless @hr.nil? %>
             <li><%= link_to "#{t('payslip_text')}", :controller => "finance", :action => "payslip_index" %></li>
           <% end %>
