sreeshanth(style issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1199 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/edit_personal.erb
+++ b/app/views/employee/edit_personal.erb
@@ -46,7 +46,7 @@
           <hr class="sub-heading"></hr>
           <div class="label-field-pair">
             <label><%= t('date_of_birth') %></label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'employee[date_of_birth]', @employee.date_of_birth,
+        <div class="text-input-bg"><%= calendar_date_select_tag 'employee[date_of_birth]', I18n.l(@employee.date_of_birth,:format=>:normal),
             :year_range => 70.years.ago..4.years.ago %></div>
       </div>
             <div class="extender"></div>
