--- a/app/views/employee/_bank_details.erb
+++ b/app/views/employee/_bank_details.erb
@@ -39,7 +39,7 @@
   </div>
 <% else %>
   <% if permitted_to? :edit3, :employee %>
-    <p class="flash-msg"><%= t('no_bank_details_entered') %><%= @employee.first_name%>. <%= link_to "ADD", :controller => "employee", :action => "edit3", :id => @employee.id %></p>
+    <p class="flash-msg"><%= t('no_bank_details_entered') %><%= @employee.first_name%>. <%= link_to "#{t('add')}", :controller => "employee", :action => "edit3", :id => @employee.id %></p>
   <% else %>  
     <p class="flash-msg"><%= t('no_bank_details_entered') %> <%= @employee.first_name%>. <%#= link_to "ADD", :controller => "employee", :action => "edit3", :id => @employee.id %></p>
   <%end%>
