bug fixed => attendance menu displayed in student login
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1208 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -4,7 +4,7 @@
   <% if permitted_to? :index, :student %>
     <li><%= link_to t('students'), :controller => "student", :action => "index" %></li>
   <% end %>
-  <% if permitted_to? :index, :student_attendance %>
+  <% if permitted_to? :index, :attendance_reports or permitted_to? :index, :attendances %>
     <li><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
       <ul class="level-1">
         <% if permitted_to? :index, :attendances %>
