--- a/app/views/calendar/_month.erb
+++ b/app/views/calendar/_month.erb
@@ -97,13 +97,13 @@
                           :url => { :action => :show_exam_event_tooltip, :id=>Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}") },:before => "Element.show('loader')",:success => "Element.hide('loader')"),
                         :class=>"event"}) %>
                   <% end %>
-                  <% if @user.admin? or @user.student? %>
+                  <%# if @user.admin? or @user.student? %>
                     <% if @notifications['finance_due'].include?("#{@show_month.year}-#{@show_month.month}-#{dt}".to_date) %>
                       <%= link_to_remote("<div class='calendar-legend' style='background:#b40000;'></div>", {:url => {:action => "#"}} , {:onmouseover =>remote_function(
                             :url => { :action => :show_due_tooltip, :id=>Date.parse("#{@show_month.year}-#{@show_month.month}-#{dt}") },:before => "Element.show('loader')",:success => "Element.hide('loader')"),
                           :class=>"event"}) %>
                     <% end %>
-                  <% end %>
+                  <%# end %>
 
                 </div>
 
