#1149 style issue /student/previous_data_edit/1
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1210 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/previous_data_edit.html.erb
+++ b/app/views/student/previous_data_edit.html.erb
@@ -78,12 +78,12 @@
       <%  unless @previous_subject.nil? %>
         <% @previous_subject.each  do |p| %>
 
-          <li><div class="name"><%= p.subject %></div>
-            <div class="val"><span>:</span><%= p.mark %></div>
-            <div class="delete"><%= link_to_remote image_tag("/images/buttons/delete-new.png", :border => 0),
+          <li><div><span class="name"><%= p.subject %></span>
+            <span class="val"><span>:</span><%= p.mark %></span>
+            <span class="delete"><%= link_to_remote image_tag("/images/buttons/delete-new.png", :border => 0),
                 :url => {:action => "delete_previous_subject", :id => p.id},
 
-                :update => "added_subjects"%></div></li>
+                :update => "added_subjects"%></span></div></li>
 
         <% end %>
       <% end %>
