--- a/public/stylesheets/student/previous_data_edit.css
+++ b/public/stylesheets/student/previous_data_edit.css
@@ -43,7 +43,7 @@
     font-family:arial;
     font-size:14px;
     font-weight:bold;
-    margin-left:170px;
+    margin-left:210px;
     margin-top:30px;
     padding:7px 10px;
     border:none;
@@ -97,6 +97,7 @@
 .ajax-subject a{
     color:#9B1017;
     font-weight:bold;
+    margin-left: 45px;
 }
 
 
@@ -122,7 +123,7 @@ li div.prev_subject{
 }
 
 li{
-    width: 300px;
+    /*width: 300px;*/
 }
 
 
@@ -156,7 +157,8 @@ ul{
 }
 
 .delete{
-    float: left;
+    /*float: left;*/
+    clear: left;
     margin-top: -2px;
     margin-left: 5px;
 }
